[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/tiles/TilesCorrected/Bezier.png" type="Texture" id=1]
[ext_resource path="res://Scenes/FinalBoss/Bezier.gd" type="Script" id=2]
[ext_resource path="res://Assets/TorchLight3.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Bezier" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="TileTexture" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -93, -38, -77, -51, -57, -59, -35, -65, 0, -66, 28, -64, 44, -60, 59, -55, 81, -41, 90, -23, 85, -2, 70, 24, 49, 42, 27, 52, 0, 57, -29, 53, -54, 42, -77, 24, -90, 5, -96, -20 )

[node name="FireHitbox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -72, -54, -65, -81, -52, -92, -16, -126, 21, -138, 63, -115, 80, -93, 82, -71, 72, -52 )
disabled = true

[node name="ActivationRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationRadius"]
scale = Vector2( 20, 15 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )
texture_scale = 10.0
color = Color( 0.913725, 0.517647, 0.172549, 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="ActivationRadius" to="." method="_on_ActivationRadius_body_entered"]
[connection signal="body_exited" from="ActivationRadius" to="." method="_on_ActivationRadius_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
